--- a/src/components/styles/whoGoesFirst.css
+++ b/src/components/styles/whoGoesFirst.css
@@ -1,7 +1,7 @@
 .whoGoesFirstContainer{
 display:grid;
 place-content: center;
-grid-template-rows: 1fr 1fr .5fr .5fr .75fr;
+grid-template-rows: 1fr .75fr .5fr .5fr .75fr;
 position:absolute;
 flex-direction:column;
 width:100%;
@@ -10,6 +10,13 @@ color:white;
 background-color:rgb(0, 0, 0);
 z-index:10;
 
+}
+@media screen and (min-height:1400px){
+    .whoGoesFirstContainer{
+        grid-template-rows: .2fr .15fr .10fr .10fr 1fr;
+       
+
+    }
 }
 
 .selectMenu{
@@ -79,11 +86,18 @@ max-width: 340px;
 
 .centerFlexFullWidth > .closeButton{
     background-color:#617c93;
-    position:fixed;
+    
     width:clamp(150px,75%,350px);
+    
+    
+}
+
+@media screen and (max-height:1000px){
+    
+    .centerFlexFullWidth > .closeButton{
+    position:fixed;
     bottom:0px;
-    
-    
+    }
 }
 
 .centerFlexFullWidth > h1 {
